kubernetes/clusters/home/4-apps/utils/mealie/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mealie-service
  namespace: utils

spec:
  selector:
    app: mealie

  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000

  type: ClusterIP
